# CppLearn

./: .gitignore  CMakeLists.txt
.github/workflows/: c-cpp.yml
Lottery/: CMakeLists.txt
Lottery/include/: Draw.hpp  HelperFunctions.hpp  Lotto.hpp
Lottery/source/: Draw.cpp
Lotto/: main.cpp
Lotto/source/: Lotto.cpp
Polymorphism/: CMakeLists.txt  main.cpp
Polymorphism/include/: Animal.hpp  Cat.hpp  Cow.hpp  Dog.hpp
Polymorphism/source/: Animal.cpp  Cat.cpp  Cow.cpp  Dog.cpp
